--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-MONGO_URL = mongodb+srv://Den:test1234@cluster0.ifqbj.mongodb.net/todos-base?retryWrites=true&w=majority
+MONGO_URL = mongodb+srv://Selefais:you1are5empty0@cluster0.dty0s.mongodb.net/words?retryWrites=true&w=majority
 PORT = 8080
